tests/e2e/semantics/obj_key_regexp.error
Error: syntax error in story at line 2, column 6

2|    b = {a: "bar"}
           ^

E0125: `regexp` is not hashable and can't be used as an object key.
